[package]
name = "plasma"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.dev]
opt-level = 2
lto = true
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
debug = 0

[dependencies]
mos-hardware = {git = "https://github.com/mlund/mos-hardware", branch = "main"}
ufmt-stdio = "0"
itertools = {version = "0.10", default-features = false}
