[workspace]
members = ["plasma"]
resolver = "2" # https://github.com/mlund/mos-hardware/issues/1

[workspace.package]
description = "Rust examples for MEGA65"
authors = ["The MEGA65 Community"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mega65/mega65-examples"
keywords = ["mega65", "8-bit", "llvm-mos", "6502", "rust"]
categories = ["embedded", "no-std"]
edition = "2021"

[workspace.dependencies]
mos-hardware = {git = "https://github.com/mlund/mos-hardware", branch = "main"}
ufmt-stdio = "0"

[profile.dev]
opt-level = 2
lto = true
debug = 2
codegen-units = 1

[profile.release]
opt-level = "s"
lto = true
debug = 0
